--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 		var buildUrl = "Build";
 		var loaderUrl = buildUrl + "/NHC-Metavers_WEBGL_Test.loader.js";
 		var config = {
-			dataUrl: buildUrl + "/NHC-Metavers_WEBGL_Test.data.unityweb",
-			frameworkUrl: buildUrl + "/NHC-Metavers_WEBGL_Test.framework.js.unityweb",
-			codeUrl: buildUrl + "/NHC-Metavers_WEBGL_Test.wasm.unityweb",
+			dataUrl: buildUrl + "/NHC-Metavers_WEBGL_Test.data",
+			frameworkUrl: buildUrl + "/NHC-Metavers_WEBGL_Test.framework.js",
+			codeUrl: buildUrl + "/NHC-Metavers_WEBGL_Test.wasm",
         streamingAssetsUrl: "StreamingAssets",
 			companyName: "NARSUN Studios",
 			productName: "NHC Metaverse",
