--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                   unityInstance.SetFullscreen(1);
                 };
               }).catch((message) => {
-                alert(message);
+                //alert(message);
               });
             };
 
