--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
   <head>
-    <meta charset="utf-8" />
-    <title>Unity WebGL Build</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity Web Player | SmartInputBridge</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+
     <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-        background: #000;
-      }
-      #unity-container {
-        width: 100vw;
-        height: 100vh;
-        position: relative;
-        touch-action: none;
-      }
-      canvas {
-        width: 100%;
-        height: 100%;
-        display: block;
-      }
       #webInput {
         position: absolute;
         top: 40%;
@@ -38,22 +25,101 @@
     </style>
   </head>
   <body>
-    <div id="unity-container">
-      <canvas id="unity-canvas"></canvas>
+    <div id="unity-container" class="unity-desktop">
+      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
       <input id="webInput" type="text" oninput="sendToUnity()" />
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
+        </div>
+      </div>
+      <div id="unity-warning"> </div>
+      <div id="unity-footer">
+        <div id="unity-logo-title-footer"></div>
+        <div id="unity-fullscreen-button"></div>
+        <div id="unity-build-title">SmartInputBridge</div>
+      </div>
     </div>
 
-    <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unity-container", "Build/Build.json");
+      var canvas = document.querySelector("#unity-canvas");
+      var unityInstance = null;
 
+      // 🔹 Show banner (Unity default)
+      function unityShowBanner(msg, type) {
+        var warningBanner = document.querySelector("#unity-warning");
+        function updateBannerVisibility() {
+          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+        }
+        var div = document.createElement('div');
+        div.innerHTML = msg;
+        warningBanner.appendChild(div);
+        if (type == 'error') div.style = 'background: red; padding: 10px;';
+        else {
+          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+          setTimeout(function () {
+            warningBanner.removeChild(div);
+            updateBannerVisibility();
+          }, 5000);
+        }
+        updateBannerVisibility();
+      }
+
+      // 🔹 Unity Build Info
+      var buildUrl = "Build";
+      var loaderUrl = buildUrl + "/Build.loader.js";
+      var config = {
+        arguments: [],
+        dataUrl: buildUrl + "/Build.data",
+        frameworkUrl: buildUrl + "/Build.framework.js",
+        codeUrl: buildUrl + "/Build.wasm",
+        streamingAssetsUrl: "StreamingAssets",
+        companyName: "DefaultCompany",
+        productName: "SmartInputBridge",
+        productVersion: "0.1.0",
+        showBanner: unityShowBanner,
+      };
+
+      // 🔹 Responsive Design
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        var meta = document.createElement('meta');
+        meta.name = 'viewport';
+        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+        document.getElementsByTagName('head')[0].appendChild(meta);
+        document.querySelector("#unity-container").className = "unity-mobile";
+        canvas.className = "unity-mobile";
+      } else {
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
+      }
+
+      document.querySelector("#unity-loading-bar").style.display = "block";
+
+      var script = document.createElement("script");
+      script.src = loaderUrl;
+      script.onload = () => {
+        createUnityInstance(canvas, config, (progress) => {
+          document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
+        }).then((instance) => {
+          unityInstance = instance;
+          document.querySelector("#unity-loading-bar").style.display = "none";
+          document.querySelector("#unity-fullscreen-button").onclick = () => {
+            unityInstance.SetFullscreen(1);
+          };
+        }).catch((message) => {
+          alert(message);
+        });
+      };
+
+      document.body.appendChild(script);
+
+      // ✅ Injected for Input Handling (SmartInputBridge)
       function ShowInput(currentValue) {
         const input = document.getElementById("webInput");
         input.value = currentValue;
         input.style.display = "block";
         input.focus();
-
-        // Scroll to center (for iOS keyboard)
         setTimeout(() => {
           input.scrollIntoView({ behavior: "smooth", block: "center" });
         }, 300);
@@ -65,7 +131,7 @@
 
       function sendToUnity() {
         const value = document.getElementById("webInput").value;
-        if (typeof unityInstance !== "undefined") {
+        if (unityInstance) {
           unityInstance.SendMessage("WebInputHandler", "SetTextFromWeb", value);
         }
       }
